[package]
name = "yellowstone-vixen-okx"
description = "OKX DEX Aggregator client for Solana"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "okx-swap"
path = "src/bin/okx-swap.rs"

[[example]]
name = "simple_swap"
path = "examples/simple_swap.rs"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
thiserror = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
solana-sdk = { workspace = true }
solana-compute-budget-interface = "^3.0.0"
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
bincode = { workspace = true }
